Adding Logo and Images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
     <script src="js/script.js" defer></script>
     <title>Bookmark Website</title>
   </head>
-  <body>
-    <h1>Hello</h1>
+  <body class="overflow-x-hidden">
+    <nav class="relative container mx-auto p-6">
+      <!-- Flex Container For Nav Items -->
+      <div class="my-6 flex items-center justify-between space-x-20">
+        <!-- Logo -->
+        <div class="z-30">
+          <img id="logo" src="images/logo-bookmark.svg" alt="" />
+        </div>
+        <!-- Menu Items -->
+      </div>
+    </nav>
   </body>
 </html>
