--- a/index.html
+++ b/index.html
@@ -24,12 +24,23 @@
   <body class="overflow-x-hidden">
     <nav class="relative container mx-auto p-6">
       <!-- Flex Container For Nav Items -->
-      <div class="my-6 flex items-center justify-between space-x-20">
+      <div class="my-6 flex items-center justify-between">
         <!-- Logo -->
         <div class="z-30">
           <img id="logo" src="images/logo-bookmark.svg" alt="" />
         </div>
         <!-- Menu Items -->
+        <div class="text-grayshBlue hidden items-center space-x-10 uppercase md:flex">
+          <a class="hover:text-softRed tracking-widest" href="#features">Features</a>
+          <a class="hover:text-softRed tracking-widest" href="#download">Download</a>
+          <a class="hover:text-softRed tracking-widest" href="#faq">FAQ</a>
+          <a
+            class="bg-softRed border-softRed hover:text-softRed rounded-lg border-2 px-8 py-2 text-white shadow-md
+              hover:bg-white"
+            href="#"
+            >Login</a
+          >
+        </div>
       </div>
     </nav>
   </body>
