Adding Hero Section

--- a/index.html
+++ b/index.html
@@ -43,5 +43,39 @@
         </div>
       </div>
     </nav>
+    <!-- Hero Section -->
+    <section id="hero">
+      <!-- Container For Image & Content -->
+      <div class="container mx-auto flex flex-col-reverse p-6 lg:flex-row">
+        <!-- Content -->
+        <div class="flex flex-col space-y-10 lg:mt-16 lg:w-1/2">
+          <h1 class="text-center text-3xl font-semibold lg:text-left lg:text-6xl">A Simple Bookmark Manager</h1>
+          <p class="mx-auto max-w-md text-center text-lg text-gray-400 lg:mx-0 lg:text-left lg:text-2xl">
+            A clean and simple interface to organize your favorite website. Open a new browser tab and see your sites
+            load instantly. Try it for free.
+          </p>
+          <!-- Buttons Container -->
+          <div class="flex justify-center space-x-4 lg:justify-start">
+            <a
+              class="bg-softBlue border-softBlue hover:text-softBlue rounded border-2 p-4 text-sm font-semibold
+                text-white shadow-md hover:bg-white md:text-base"
+              href="#"
+              >Get It On Chrome</a
+            >
+            <a
+              class="rounded border-2 border-gray-300 bg-gray-300 p-4 text-sm font-semibold shadow-md hover:bg-white
+                hover:text-gray-600 md:text-base"
+              href="#"
+              >Get It On Firefox</a
+            >
+          </div>
+        </div>
+        <!-- Image -->
+        <div class="relative mx-auto lg:mx-0 lg:w-1/2">
+          <div class="bg-hero"></div>
+          <img class="relative lg:top-24 xl:top-0" src="/images/illustration-hero.svg" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
