--- a/index.html
+++ b/index.html
@@ -77,5 +77,49 @@
         </div>
       </div>
     </section>
+    <!-- Features Heading -->
+    <section id="features">
+      <div class="container mx-auto mt-16 px-6">
+        <h2 class="mb-6 text-center text-4xl font-semibold">Features</h2>
+        <p class="text-grayishBlue mx-auto max-w-md text-center">
+          Our aim is to make it quick and easy for you to access your favorite websites. Your bookmarks sync between
+          your devices so you can access them on the go.
+        </p>
+      </div>
+    </section>
+    <!-- Features Tabs -->
+    <section id="tabs">
+      <!-- Tabs Container -->
+      <div class="relative container mx-auto mt-12 mb-32 px-6">
+        <div class="bg-tabs"></div>
+        <!-- Tabs Flex Container -->
+        <div class="mx-auto mb-6 flex max-w-xl flex-col border-gray-600 md:flex-row md:space-x-10 md:border-b">
+          <!-- Tab 1 -->
+          <div
+            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600 md:w-1/3
+              md:border-b-0"
+            data-target="panel-1"
+          >
+            <div class="border-softRed border-b-4 py-5" data-target="panel-1">Simple Bookmarking</div>
+          </div>
+          <!-- Tab 2 -->
+          <div
+            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600 md:w-1/3
+              md:border-b-0"
+            data-target="panel-2"
+          >
+            <div class="py-5" data-target="panel-2">Speedy Seaching</div>
+          </div>
+          <!-- Tab 3 -->
+          <div
+            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600 md:w-1/3
+              md:border-b-0"
+            data-target="panel-3"
+          >
+            <div class="py-5" data-target="panel-3">Easy Sharing</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
