--- a/index.html
+++ b/index.html
@@ -119,6 +119,32 @@
             <div class="py-5" data-target="panel-3">Easy Sharing</div>
           </div>
         </div>
+        <!-- Tab Panels -->
+        <section id="pannels">
+          <!-- Panel 1 -->
+          <div class="panel panel-1 flex flex-col py-5 md:flex-row md:space-x-7">
+            <!-- Panel Image -->
+            <div class="md:w-1/2">
+              <img class="relative" src="images/illustration-features-tab-1.svg" alt="" />
+            </div>
+            <!-- Panel Content -->
+            <div class="flex flex-col space-y-8 md:w-1/2">
+              <h3 class="mt-32 text-center text-3xl font-semibold md:mt-0 md:text-left">Bookmark in one click</h3>
+              <p class="text-grayishBlue max-w-md text-center md:text-left">
+                Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control
+                over how you manage your favourite sites.
+              </p>
+              <div class="mx-auto md:mx-0">
+                <a
+                  class="bg-softBlue hover:text-softBlue hover:border-softBlue mt-4 rounded-lg border-2 border-white
+                    px-6 py-3 font-semibold text-white hover:border-2 hover:bg-white md:inline-flex"
+                  href="#"
+                  >More Info</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </section>
   </body>
