--- a/index.html
+++ b/index.html
@@ -144,6 +144,52 @@
               </div>
             </div>
           </div>
+          <!-- Panel 2 -->
+          <div class="panel panel-2 flex hidden flex-col py-5 md:flex-row md:space-x-7">
+            <!-- Panel Image -->
+            <div class="md:w-1/2">
+              <img class="relative" src="images/illustration-features-tab-2.svg" alt="" />
+            </div>
+            <!-- Panel Content -->
+            <div class="flex flex-col space-y-8 md:w-1/2">
+              <h3 class="mt-14 text-center text-3xl font-semibold md:mt-0 md:text-left">Intelligent search</h3>
+              <p class="text-grayishBlue max-w-md text-center md:text-left">
+                Our powerful search feature will help you find saved sites in no time at all. No need to trawl through
+                all of your bookmarks.
+              </p>
+              <div class="mx-auto md:mx-0">
+                <a
+                  class="bg-softBlue hover:text-softBlue hover:border-softBlue mt-4 rounded-lg border-2 border-white
+                    px-6 py-3 font-semibold text-white hover:border-2 hover:bg-white md:inline-flex"
+                  href="#"
+                  >More Info</a
+                >
+              </div>
+            </div>
+          </div>
+          <!-- Panel 3 -->
+          <div class="panel panel-3 flex hidden flex-col py-5 md:flex-row md:space-x-7">
+            <!-- Panel Image -->
+            <div class="md:w-1/2">
+              <img class="relative" src="images/illustration-features-tab-3.svg" alt="" />
+            </div>
+            <!-- Panel Content -->
+            <div class="flex flex-col space-y-8 md:w-1/2">
+              <h3 class="mt-14 text-center text-3xl font-semibold md:mt-0 md:text-left">Share your bookmarks</h3>
+              <p class="text-grayishBlue max-w-md text-center md:text-left">
+                Easily share your bookmarks and collections with others. Create a shareable a link that you can send at
+                the click of a button.
+              </p>
+              <div class="mx-auto md:mx-0">
+                <a
+                  class="bg-softBlue hover:text-softBlue hover:border-softBlue mt-4 rounded-lg border-2 border-white
+                    px-6 py-3 font-semibold text-white hover:border-2 hover:bg-white md:inline-flex"
+                  href="#"
+                  >More Info</a
+                >
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </section>
