Adding tabs interactivity

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               md:border-b-0"
             data-target="panel-2"
           >
-            <div class="py-5" data-target="panel-2">Speedy Seaching</div>
+            <div class="border-b-4 border-white py-5" data-target="panel-2">Speedy Seaching</div>
           </div>
           <!-- Tab 3 -->
           <div
@@ -116,11 +116,11 @@
               md:border-b-0"
             data-target="panel-3"
           >
-            <div class="py-5" data-target="panel-3">Easy Sharing</div>
+            <div class="border-b-4 border-white py-5" data-target="panel-3">Easy Sharing</div>
           </div>
         </div>
         <!-- Tab Panels -->
-        <section id="pannels">
+        <div id="panels">
           <!-- Panel 1 -->
           <div class="panel panel-1 flex flex-col py-5 md:flex-row md:space-x-7">
             <!-- Panel Image -->
@@ -129,7 +129,7 @@
             </div>
             <!-- Panel Content -->
             <div class="flex flex-col space-y-8 md:w-1/2">
-              <h3 class="mt-32 text-center text-3xl font-semibold md:mt-0 md:text-left">Bookmark in one click</h3>
+              <h3 class="mt-38 text-center text-3xl font-semibold md:mt-0 md:text-left">Bookmark in one click</h3>
               <p class="text-grayishBlue max-w-md text-center md:text-left">
                 Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control
                 over how you manage your favourite sites.
@@ -145,7 +145,7 @@
             </div>
           </div>
           <!-- Panel 2 -->
-          <div class="panel panel-2 flex hidden flex-col py-5 md:flex-row md:space-x-7">
+          <div class="panel panel-2 hidden flex-col py-5 md:flex-row md:space-x-7">
             <!-- Panel Image -->
             <div class="md:w-1/2">
               <img class="relative" src="images/illustration-features-tab-2.svg" alt="" />
@@ -168,7 +168,7 @@
             </div>
           </div>
           <!-- Panel 3 -->
-          <div class="panel panel-3 flex hidden flex-col py-5 md:flex-row md:space-x-7">
+          <div class="panel panel-3 hidden flex-col py-5 md:flex-row md:space-x-7">
             <!-- Panel Image -->
             <div class="md:w-1/2">
               <img class="relative" src="images/illustration-features-tab-3.svg" alt="" />
@@ -190,7 +190,13 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
+      </div>
+    </section>
+    <!-- Download Heading -->
+    <section id="download">
+      <div class="container mx-auto px-6">
+        <h2 class="mb-6 text-center text-3xl font-semibold md:text-4xl">Download the extension</h2>
       </div>
     </section>
   </body>
