--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
     <section id="download">
       <div class="container mx-auto px-6">
         <h2 class="mb-6 text-center text-3xl font-semibold md:text-4xl">Download the extension</h2>
+        <p class="text-grayishBlue mx-auto max-w-lg text-center">
+          We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to
+          prioritize.
+        </p>
       </div>
     </section>
   </body>
