--- a/index.html
+++ b/index.html
@@ -203,5 +203,71 @@
         </p>
       </div>
     </section>
+    <!-- Download Boxes -->
+    <section class="py-32" id="download-boxes">
+      <!-- Boxes Container -->
+      <div
+        class="relative mx-auto flex max-w-5xl flex-col items-center space-y-10 px-10 md:flex-row md:space-y-0
+          md:space-x-7 md:px-6"
+      >
+        <!-- Box 1 -->
+        <div class="flex w-full flex-col space-y-4 rounded-lg py-6 text-center shadow-lg md:w-1/3">
+          <!-- Image -->
+          <div class="flex justify-center">
+            <img src="images/logo-chrome.svg" alt="" />
+          </div>
+          <!-- Text -->
+          <h5 class="pt-5 text-xl font-bold">Add to Chrome</h5>
+          <p class="text-gray-400">Minimum Version 62</p>
+          <!-- Dots -->
+          <div class="bg-dots mx-2 bg-repeat-x px-4 pt-6 capitalize">
+            <a
+              class="bg-softBlue hover:text-softBlue border-softBlue block rounded-lg border-2 py-3 text-white
+                duration-200 hover:bg-white"
+              href="#"
+              >add & install extension</a
+            >
+          </div>
+        </div>
+        <!-- Box 2 -->
+        <div class="flex w-full flex-col space-y-4 rounded-lg py-6 text-center shadow-lg md:mt-8 md:w-1/3">
+          <!-- Image -->
+          <div class="flex justify-center">
+            <img src="images/logo-firefox.svg" alt="" />
+          </div>
+          <!-- Text -->
+          <h5 class="pt-5 text-xl font-bold">Add to Firefox</h5>
+          <p class="text-gray-400">Minimum Version 55</p>
+          <!-- Dots -->
+          <div class="bg-dots mx-2 bg-repeat-x px-4 pt-6 capitalize">
+            <a
+              class="bg-softBlue hover:text-softBlue border-softBlue block rounded-lg border-2 py-3 text-white
+                duration-200 hover:bg-white"
+              href="#"
+              >add & install extension</a
+            >
+          </div>
+        </div>
+        <!-- Box 3 -->
+        <div class="flex w-full flex-col space-y-4 rounded-lg py-6 text-center shadow-lg md:mt-16 md:w-1/3">
+          <!-- Image -->
+          <div class="flex justify-center">
+            <img src="images/logo-opera.svg" alt="" />
+          </div>
+          <!-- Text -->
+          <h5 class="pt-5 text-xl font-bold">Add to Opera</h5>
+          <p class="text-gray-400">Minimum Version 46</p>
+          <!-- Dots -->
+          <div class="bg-dots mx-2 bg-repeat-x px-4 pt-6 capitalize">
+            <a
+              class="bg-softBlue hover:text-softBlue border-softBlue block rounded-lg border-2 py-3 text-white
+                duration-200 hover:bg-white"
+              href="#"
+              >add & install extension</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
