--- a/index.html
+++ b/index.html
@@ -96,24 +96,24 @@
         <div class="mx-auto mb-6 flex max-w-xl flex-col border-gray-600 md:flex-row md:space-x-10 md:border-b">
           <!-- Tab 1 -->
           <div
-            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600 md:w-1/3
-              md:border-b-0"
+            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600
+              hover:cursor-pointer md:w-1/3 md:border-b-0"
             data-target="panel-1"
           >
             <div class="border-softRed border-b-4 py-5" data-target="panel-1">Simple Bookmarking</div>
           </div>
           <!-- Tab 2 -->
           <div
-            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600 md:w-1/3
-              md:border-b-0"
+            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600
+              hover:cursor-pointer md:w-1/3 md:border-b-0"
             data-target="panel-2"
           >
             <div class="border-b-4 border-white py-5" data-target="panel-2">Speedy Seaching</div>
           </div>
           <!-- Tab 3 -->
           <div
-            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600 md:w-1/3
-              md:border-b-0"
+            class="hover:text-softRed tab flex justify-center border-b border-gray-600 text-gray-600
+              hover:cursor-pointer md:w-1/3 md:border-b-0"
             data-target="panel-3"
           >
             <div class="border-b-4 border-white py-5" data-target="panel-3">Easy Sharing</div>
@@ -265,6 +265,112 @@
               href="#"
               >add & install extension</a
             >
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- FAQ Heading -->
+    <section id="faq">
+      <div class="container mx-auto">
+        <h2 class="mb-6 text-center text-3xl font-semibold md:text-4xl">Frequently Asked Questions</h2>
+        <p class="text-grayishBlue mx-auto max-w-lg px-6 text-center">
+          Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.
+        </p>
+      </div>
+    </section>
+    <!-- FAQ Accordion -->
+    <section id="faq-accordion">
+      <!-- Main Container -->
+      <div class="container mx-auto mb-32 px-6">
+        <!-- Accordion Container -->
+        <div class="m-8 mx-auto max-w-2xl">
+          <!-- Tab 1 -->
+          <div class="group border-b py-1" tabindex="1">
+            <!-- Tab Flex Container -->
+            <div class="flex cursor-pointer items-center justify-between py-3 text-gray-500">
+              <!-- Tab Title -->
+              <div class="ease duration-500 group-hover:text-red-500">What is Bookmark?</div>
+              <!-- Arrow -->
+              <div class="ease duration-500 group-focus:-rotate-180 group-focus:text-red-500">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+                  <path fill="none" stroke="currentColor" stroke-width="3" d="M1 1l8 8 8-8" />
+                </svg>
+              </div>
+            </div>
+            <!-- Tab Inner Content -->
+            <div class="ease max-h-0 overflow-hidden duration-500 group-focus:max-h-screen">
+              <p class="py-2 text-justify text-gray-400">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, repellat amet doloribus consequuntur
+                eos similique provident tempora voluptates iure quia fuga dicta voluptatibus culpa mollitia recusandae
+                delectus id suscipit labore?
+              </p>
+            </div>
+          </div>
+          <!-- Tab 2 -->
+          <div class="group border-b py-1" tabindex="2">
+            <!-- Tab Flex Container -->
+            <div class="flex cursor-pointer items-center justify-between py-3 text-gray-500">
+              <!-- Tab Title -->
+              <div class="ease duration-500 group-hover:text-red-500">How can I request a new browser?</div>
+              <!-- Arrow -->
+              <div class="ease duration-500 group-focus:-rotate-180 group-focus:text-red-500">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+                  <path fill="none" stroke="currentColor" stroke-width="3" d="M1 1l8 8 8-8" />
+                </svg>
+              </div>
+            </div>
+            <!-- Tab Inner Content -->
+            <div class="ease max-h-0 overflow-hidden duration-500 group-focus:max-h-screen">
+              <p class="py-2 text-justify text-gray-400">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, repellat amet doloribus consequuntur
+                eos similique provident tempora voluptates iure quia fuga dicta voluptatibus culpa mollitia recusandae
+                delectus id suscipit labore?
+              </p>
+            </div>
+          </div>
+          <!-- Tab 3 -->
+          <div class="group border-b py-1" tabindex="3">
+            <!-- Tab Flex Container -->
+            <div class="flex cursor-pointer items-center justify-between py-3 text-gray-500">
+              <!-- Tab Title -->
+              <div class="ease duration-500 group-hover:text-red-500">Is there a mobile app?</div>
+              <!-- Arrow -->
+              <div class="ease duration-500 group-focus:-rotate-180 group-focus:text-red-500">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+                  <path fill="none" stroke="currentColor" stroke-width="3" d="M1 1l8 8 8-8" />
+                </svg>
+              </div>
+            </div>
+            <!-- Tab Inner Content -->
+            <div class="ease max-h-0 overflow-hidden duration-500 group-focus:max-h-screen">
+              <p class="py-2 text-justify text-gray-400">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, repellat amet doloribus consequuntur
+                eos similique provident tempora voluptates iure quia fuga dicta voluptatibus culpa mollitia recusandae
+                delectus id suscipit labore?
+              </p>
+            </div>
+          </div>
+          <!-- Tab 4 -->
+          <div class="group border-b py-1" tabindex="4">
+            <!-- Tab Flex Container -->
+            <div class="flex cursor-pointer items-center justify-between py-3 text-gray-500">
+              <!-- Tab Title -->
+              <div class="ease duration-500 group-hover:text-red-500">What about other Chromium browsers?</div>
+              <!-- Arrow -->
+              <div class="ease duration-500 group-focus:-rotate-180 group-focus:text-red-500">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="12">
+                  <path fill="none" stroke="currentColor" stroke-width="3" d="M1 1l8 8 8-8" />
+                </svg>
+              </div>
+            </div>
+            <!-- Tab Inner Content -->
+            <div class="ease max-h-0 overflow-hidden duration-500 group-focus:max-h-screen">
+              <p class="py-2 text-justify text-gray-400">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, repellat amet doloribus consequuntur
+                eos similique provident tempora voluptates iure quia fuga dicta voluptatibus culpa mollitia recusandae
+                delectus id suscipit labore?
+              </p>
+            </div>
           </div>
         </div>
       </div>
