Adding Newsletter Section

--- a/index.html
+++ b/index.html
@@ -375,5 +375,33 @@
         </div>
       </div>
     </section>
+    <!-- Newsletter Section -->
+    <section class="bg-softBlue" id="newsletter">
+      <!-- Main Container -->
+      <div class="mx-auto max-w-lg py-24">
+        <p class="mb-6 text-center text-lg tracking-widest text-white uppercase">35,000+ Already Joined</p>
+        <h2 class="mb-6 px-3 text-center text-3xl font-semibold text-white md:text-4xl">
+          Stay up-to-date with what we're doing
+        </h2>
+        <!-- Form -->
+        <form class="md:px-14">
+          <!-- Input & Button Container -->
+          <div class="flex flex-col items-center justify-between space-y-4 md:flex-row md:space-y-0 md:space-x-3">
+            <input
+              class="flex-1 rounded-lg border border-white bg-white px-6 pt-3 pb-2 focus:outline-none md:mb-0"
+              type="text"
+              name="email"
+              placeholder="Enter your email address"
+            />
+            <input
+              class="bg-softRed inline-flex cursor-pointer rounded-lg px-6 py-3 font-semibold text-white duration-200
+                hover:opacity-90"
+              type="submit"
+              value="Contact Us"
+            />
+          </div>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
