Adding Hamburger HTML

--- a/index.html
+++ b/index.html
@@ -41,6 +41,31 @@
             >Login</a
           >
         </div>
+        <!-- Hamburger Button -->
+        <button class="hamburger z-30 md:hidden" id="menu-btn">
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
+      <!-- Mobile Menu -->
+      <div
+        class="bg-veryDarkBlue fixed inset-0 z-20 hidden h-full flex-col items-center divide-y divide-gray-500 self-end
+          px-6 pt-24 pb-4 tracking-widest text-white uppercase opacity-90"
+        id="menu"
+      >
+        <div class="hover:text-softRed w-full py-3 text-center">
+          <a href="#features">Features</a>
+        </div>
+        <div class="hover:text-softRed w-full py-3 text-center">
+          <a href="#download">Download</a>
+        </div>
+        <div class="hover:text-softRed w-full py-3 text-center">
+          <a href="#faq">FAQ</a>
+        </div>
+        <div class="hover:text-softRed w-full py-3 text-center">
+          <a href="#">Login</a>
+        </div>
       </div>
     </nav>
     <!-- Hero Section -->
@@ -423,7 +448,7 @@
         <div class="flex space-x-10">
           <a href="#"><img class="ficon h-6" src="images/icon-facebook.svg" alt="" /></a>
           <a href="#"><img class="ficon h-6" src="images/icon-twitter.svg" alt="" /></a>
-        </>
+        </div>
       </div>
     </footer>
   </body>
